--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,21 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+
+@article{a.lee-yaw2021,
+	title = {Species distribution models rarely predict the biology of real populations},
+	author = {{A. Lee{-}Yaw}, Julie and L. McCune, Jenny and Pironon, Samuel and N. Sheth, Seema},
+	year = {2021},
+	month = {12},
+	date = {2021-12-21},
+	journal = {Ecography},
+	pages = {ecog.05877},
+	doi = {10.1111/ecog.05877},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/ecog.05877},
+	langid = {en}
 }
 
-
+@book{guisan2017,
+	title = {Habitat suitability and distribution models: with applications in R},
+	author = {Guisan, Antoine and Thuiller, Wilfried and Zimmermann, Niklaus E.},
+	year = {2017},
+	date = {2017},
+	publisher = {Cambridge University Press}
+}
