--- a/ecophysiology.qmd
+++ b/ecophysiology.qmd
@@ -199,7 +199,7 @@ In the previous section we developed a simple mechanistic model for the climate 
 
 ![The Iberian emerald lizard, *Lacerta schreiberi*.](images/Lacerta_schreiberi.JPG){#fig-schreiberi}
 
-I will illustrate this with one my favorite species, the Iberian emerald lizard, *Lacerta schreiberi* . First we obtain the presences for a species from GBIF (Global Biodiversity Information Facility, <http://www.gbif.org>). GBIF is a repository for biodiversity observations, and has over three billions of occurrences of over a million species all over the world at the time I am writing these words. Natural history museums, citizen science platforms such as iNaturalist ( <http://www.inaturalist.org>) and eBird (<http://www.ebird.org>), and scientists, publish their species records in GBIF using a data format called Darwin Core. There is a R package that allows one to download observations from GBIF and also other relevant geodata, the **geodata** package. We will be doing some geospatial processing, so let's load also the **terra** package.
+I will illustrate this with one my favorite species, the Iberian emerald lizard, *Lacerta schreiberi*, a species endemic to the Iberian peninsula, often found near water streams in mountain landscapes, but also in other habitats. First we obtain the presences for a species from GBIF (Global Biodiversity Information Facility, <http://www.gbif.org>). GBIF is a repository for biodiversity observations, and has over three billions of occurrences of over a million species all over the world at the time I am writing these words. Natural history museums, citizen science platforms such as iNaturalist ( <http://www.inaturalist.org>) and eBird (<http://www.ebird.org>), and scientists, publish their species records in GBIF using a data format called Darwin Core. There is a R package that allows one to download observations from GBIF and also other relevant geodata, the **geodata** package. We will be doing some geospatial processing, so let's load also the **terra** package.
 
 ```{r}
 #| eval: false
