--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,7 @@ This website is (and will always be) **free to use**, and is licensed under the 
 
 We live in the midst of the biodiversity crisis. Biodiversity science, at first mostly a spin off from Ecology, has developed tremendously in the last two decades, becoming a truly interdisciplinary field, with contributions from Geography, Economy, Social Sciences and many other disciplines. Big data and the development of statistical ecology has also been remarkable. As I write these lines, the Global Biodiversity Information Facility or GBIF (<https://gbif.org>) is about to hit 3 billion records. The availability of large amounts of data and the availability of the open source R software (<https://www.r-project.org>) has made statistical approaches take the main stage in much of ecological research. However, at the same time, as a biodiversity researcher, practitioner, and a teacher, I find again and again the need for a good understanding of ecological theory to be able to carry out my work. This book if for all of you that have also felt a similar need.
 
-<!-- more on ecological modelling versus ecological theory  -->
+<!--# more on ecological modelling versus ecological theory  -->
 
 Programming and mathematics are key tools of ecological theory. The programming language I use in this book is R (version 4, available from <https://www.r-project.org>). If you have familiarly with programming in another computer language, a fast skimming of Appendix A will be enough to get you going with the book. If you are new to programming, I recommend you spend a few hours working through the short course in Appendix A, but you may also wanna consult some web resources (e.g. <https://ourcodingclub.github.io/course>). With the advent of Large Language Models (LLM) such as ChatGPT there may be the temptation to think programming knowledge will no longer be needed. I think LLMs will accelerate our writing of computer code, but they will not replace the need for being able to read and understand the code.
 
