--- a/ecophysiology.qmd
+++ b/ecophysiology.qmd
@@ -124,8 +124,8 @@ lines(Q,A_min) #adds line for the minimum survivable air temperature
 Let's paint the area between the two lines which corresponds to the climate space of the lizard. We can use the **R** function `polygon`, to which we need to give the set of `x` and `y` coordinates delimiting the climate space as vectors. For instance, the upper lower corner can be the first coordinate, being 0 for the `x` vector and `b_min` for the `y` vector. The right upper corner is 1500 for `x` and `b_max-1500/k` for `y`.
 
 ```{r eval=FALSE}
-X<-c(0,0,1500,1500)
-Y<-c(b_min,b_max,b_max-1500/k,b_min-1500/k)
+X = c(0,0,1500,1500)
+Y = c(b_min,b_max,b_max-1500/k,b_min-1500/k)
 polygon(X,Y,col="green")
 ```
 
@@ -148,20 +148,20 @@ We can overlay these values of temperatures and radiations on the plot to unders
 
 ```{r}
 #Times of the day
-T <- c("00:00","03:00","06:00","09:00",
+T = c("00:00","03:00","06:00","09:00",
       "12:00","15:00","18:00","21:00","00:00")
 
 #Solar radiation in the rock habitat
-Rock_q <- c(150,150,800,1100,1300,1200,800,400,150)
+Rock_q = c(150,150,800,1100,1300,1200,800,400,150)
 
 #Air temperature in the rock habitat
-Rock_a <- c(18,13,10,14,21,24,22,20,18)
+Rock_a = c(18,13,10,14,21,24,22,20,18)
 
 #Solar radiation in the bush habitat
-Bush_q <- c(150,150,450,600,650,650,350,200,150)
+Bush_q = c(150,150,450,600,650,650,350,200,150)
 
 #	Air temperature in the bush habitat
-Bush_a <- c(18,13,10,14,21,24,22,20,18)
+Bush_a = c(18,13,10,14,21,24,22,20,18)
 ```
 
 We overlay these vectors in the figure by invoking the function `lines(Xcoor,Ycoord)` for each micro-habitat. We add labels to each point to show the correspondence between each point and the time of the day.
@@ -196,7 +196,6 @@ text(Bush_q,Bush_a,T)
 
 In the previous section we developed a simple mechanistic model for the climate space of an organism. This is a micro-habitat level climate space. But one can also infer the climate space from the distribution of a species at the macro-habitat level. They are different but they are conceptually similar. The inference of such macro climate space is an area where species distribution models excel (for more on species distribution models check for example [@guisan2017]). The idea is relatively simple. One starts with a bunch of locations of a species in geographical space. Then, one obtains the climate characteristics for those locations, and then plots those locations in climate space. The convex hull in climate space delimited by those locations is the macro-habitat climate space. What species distribution models (SDMs) learn to do is to delineate that climate space, this is, SDMs try to predict the probability of a species occurring somewhere in the climate space by learning from presences and absences from species. Then the SDM can extrapolate again what happens in geographical space, by predicting the species occurence probability for any point based on the climate data for that point. Without getting all the way into a full blown SDM, let's try to follow some of the basics.
 
-
 ![The Iberian emerald lizard, *Lacerta schreiberi*.](images/Lacerta_schreiberi.JPG){#fig-schreiberi}
 
 I will illustrate this with one my favorite species, the Iberian emerald lizard, *Lacerta schreiberi*, a species endemic to the Iberian peninsula, often found near water streams in mountain landscapes, but also in other habitats. First we obtain the presences for a species from GBIF (Global Biodiversity Information Facility, <http://www.gbif.org>). GBIF is a repository for biodiversity observations, and has over three billions of occurrences of over a million species all over the world at the time I am writing these words. Natural history museums, citizen science platforms such as iNaturalist ( <http://www.inaturalist.org>) and eBird (<http://www.ebird.org>), and scientists, publish their species records in GBIF using a data format called Darwin Core. There is a R package that allows one to download observations from GBIF and also other relevant geodata, the **geodata** package. We will be doing some geospatial processing, so let's load also the **terra** package.
@@ -205,6 +204,53 @@ I will illustrate this with one my favorite species, the Iberian emerald lizard,
 #| eval: false
 library(geodata)
 library(terra)
+library(predicts)
+library(ggplot2)
+```
+
+We download the observations of *Lacerta schreiberi* from GBIF with the function `sp_occurence(genus,species)`. We also download a world map with the function `world(path)`, where path should point towards a local directory where we want to store the data.
+
+```{r}
+#| eval: false
+occ <- sp_occurrence("Lacerta","schreiberi") 
+world_data <- world(path = ".") #download world countries limits
+ext_eur <- c(-15,45,35,72) # coordinates of European extent
+
+#download bioclim data
+bioclim <- worldclim_global(var = 'bioc', res = 10, path = ".")
+
+# plot the map of Europe
+plot(world_data,  
+     xlab = "Longitude", ylab = "Latitude", axes = TRUE, ext=ext_eur)
+
+# add the species occurrences
+points(occ$lon,occ$lat,cex=.1,col="blue")
+
+# create pseudo-absences
+eumask<-crop(bioclim[[1]], ext(ext_eur))
+absences<-backgroundSample(eumask,nrow(occ),vect(occ),tryf=10)
+points(absences,cex=.1,col="red")
+
+
+# plot the climate variables in geographic space
+plot(bioclim[[19]],ext=ext_eur)
+plot(bioclim[[3]],ext=ext_eur)
+
+# plot the climate space figure
+# first merge occurences and absences into a single matrix
+allpts <- rbind(cbind(occ$lon,occ$lat,rep(1,nrow(occ))),
+                cbind(absences,rep(0,nrow(absences))))
+colnames(allpts)[3]<-"pres"
+
+# extract the climate variable values for all points
+bioclim_sample<-extract(bioclim,allpts[,1:2])
+allpts_bioclim <- cbind(allpts,bioclim_sample)
+
+allpts_bioclim_plot<-allpts_bioclim
+allpts_bioclim_plot$pres<-as.factor(allpts_bioclim_plot$pres)
+ggplot(allpts_bioclim_plot, aes(x=wc2.1_10m_bio_19,y=wc2.1_10m_bio_3,shape=pres, col=pres)) +
+  geom_point(size = 3, alpha=0.5) + scale_color_manual(values = c("0" = "red", "1" = "blue")) 
+
 ```
 
 ```{r echo=FALSE}
